--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
         </div>
         <script type="text/javascript" src="cordova-2.7.0.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script src="phonegap.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
