--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <title>Zombie Apocalypse To-Do List</title>
         <link rel="stylesheet" type="text/css" href="css/index.css"/>
         <script type="text/javascript" language="JavaScript">
- 
+        alert("Hello World!")
         </script>
     </head>
     <body>
