--- a/index.html
+++ b/index.html
@@ -20,13 +20,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Zombie Apocalypse To-Do List</title>
+        <title>Registration Form</title>
         <link rel="stylesheet" type="text/css" href="css/index.css"/>
         <script type="text/javascript" language="JavaScript">
-        alert("Hello World!")
         </script>
     </head>
     <body>
- 
+        <h2>Registration Form</h2>
+        <table>
+        <tr><td>Username:</td><td><input type='text' name='username'/></td></tr>
+        <tr><td>Password:</td><td><input type='password' name='password'/></td></tr>
+        <tr><td>Firstname:</td><td><input type='text' name='firstname'/></td> </tr>
+        <tr><td>Lastname:</td><td><input type='text' name='lastname'/></td></tr>
+        <tr><td>Birthdate:</td><td><input type='date' name='birthdate'/></td></tr>
+        <tr><td><input type='submit' value='Register'/></td><td><input type='reset' value='Reset'/></td></tr>
     </body>
 </html>
